# bella

./: .dockerignore  .env.example  .gitignore  .oxfmtignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.web  Dockerfile.worker  LICENSE  README.md  docker-compose.yml  justfile  package.json  railway.worker.toml  vitest.config.ts
.agents/skills/bella-cli/: SKILL.md
.github/workflows/: cli-release.yml  recreate-qa.yml  rust.yml
apps/docs/: README.md  cli-beta.md
apps/docs/architecture/: incident-delivery.md  multi-tenancy.md
apps/docs/contributors/: github-oauth.md
apps/docs/deployment/: cloud.md  hetzner.md  slack-cloud-qa.md
apps/docs/ingestion/: openai.md  posthog-dogfood.md
apps/docs/self-hosting/: github-app.md  github-oauth.md  slack.md
apps/site/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/site/app/: globals.css  layout.tsx  page.tsx
apps/site/components/: dog-ascii-logo.tsx
apps/web/: .posthog-events.json  AGENTS.md  README.md  index.html  instrumentation-client.ts  next.config.ts  package.json  vite.config.ts
apps/web/src/: App.css  App.tsx  index.css
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(dashboard)/: layout.tsx  page.tsx
apps/web/src/app/(dashboard)/data/: page.tsx
apps/web/src/app/(dashboard)/incidents/: page.tsx
apps/web/src/app/(dashboard)/incidents/[incidentId]/: page.tsx
apps/web/src/app/(dashboard)/integrations/: page.tsx
apps/web/src/app/(dashboard)/integrations/github/: page.tsx
apps/web/src/app/(dashboard)/integrations/posthog/: page.tsx
apps/web/src/app/(dashboard)/providers/: page.tsx
apps/web/src/app/(dashboard)/settings/: page.tsx
apps/web/src/app/(dashboard)/settings/ai/: page.tsx
apps/web/src/app/(dashboard)/settings/byok/: page.tsx
apps/web/src/app/(dashboard)/settings/integrations/: page.tsx
apps/web/src/app/(dashboard)/settings/organization/: page.tsx
apps/web/src/app/auth/cli/success/: page.tsx
apps/web/src/app/invite/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: app-sidebar.tsx  chart-area-interactive.tsx  integration-icon.tsx  login-form.tsx  mode-toggle.tsx  nav-main.tsx  nav-user.tsx  organization-switcher.tsx  provider-accounts.tsx  provider-dialog-context.tsx  provider-icon.tsx  providers.tsx  section-cards.tsx  settings-sections.tsx  site-header.tsx
apps/web/src/components/assistant-ui/: attachment.tsx  badge.tsx  composer-trigger-popover.tsx  directive-text.tsx  markdown-text.tsx  model-selector.tsx  reasoning.tsx  thread.tsx  tool-fallback.tsx  tool-group.tsx  tooltip-icon-button.tsx
apps/web/src/components/ui/: alert-dialog.tsx  breadcrumb.tsx  chart.tsx  dialog.tsx  drawer.tsx  field.tsx  input-group.tsx  sheet.tsx  sidebar.tsx  toggle-group.tsx
apps/web/src/hooks/: use-mobile.ts
apps/web/src/lib/: api.ts  auth-context.tsx  dashboard-types.ts  feature-flags.ts  posthog-server.ts
crates/api/: Cargo.toml
crates/api/src/: agent.rs  agent_settings.rs  auth.rs  credentials.rs  github_integration.rs  incidents.rs  integrations.rs  main.rs  organizations.rs  posthog_ingestion.rs  provider_accounts.rs  provider_validation.rs  reporting.rs  sdk_ingestion.rs  security.rs  slack.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20260612000000_initial.sql  20260613000000_auth.sql  20260613010000_tenants.sql  20260613020000_provider_accounts.sql  20260613030000_provider_validation.sql  20260613040000_ingestion.sql  20260614000000_agent_llm_settings.sql  20260614010000_agent_llm_settings_multiple.sql  20260620000000_sdk_usage_events.sql  20260622000000_incidents.sql  20260622010000_integration_credentials.sql  20260623000000_incident_delivery_jobs.sql  20260624000000_slack_cloud.sql  20260625000000_organization_invitations.sql  20260625010000_rate_limit_hits.sql  20260625020000_api_token_expiry.sql  20260626000000_posthog_live_dogfood.sql  20260627000000_rate_limit_cleanup.sql  20260627010000_slack_oauth_browser_binding.sql  20260628000000_slack_workspace_ownership.sql  20260628010000_github_integration.sql
crates/db/src/: lib.rs
crates/github/: Cargo.toml
crates/github/src/: lib.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: credentials.rs  lib.rs  openai.rs  posthog.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
crates/sandbox/: Cargo.toml  README.md
crates/sandbox/src/: main.rs
crates/slack/: Cargo.toml
crates/slack/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: incident_delivery.rs  main.rs
deploy/: smoke-test.sh
deploy/hetzner/: .env.example  Caddyfile  backup-postgres.sh  docker-compose.yml  preflight.sh  restore-postgres.sh
deploy/slack/: app-manifest.yaml  cloud-app-manifest.example.yaml
docs/: design-system.md
examples/ios/: README.md
scripts/: install-bella-cli.sh
sdks/: README.md
