[workspace]
members = [
    "crates/api",
    "crates/cli",
    "crates/core",
    "crates/db",
    "crates/mcp",
    "crates/worker",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
bella-core = { path = "crates/core" }
bella-db = { path = "crates/db" }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
