[package]
name = "bella-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bella"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
webbrowser.workspace = true
