[package]
name = "bella-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
bella-db.workspace = true
bella-ingestion.workspace = true
bella-slack.workspace = true
chrono.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
